fixed homepage elements not being aligned and other minor FE glitches

--- a/client/src/components/common/FriendlyCaptcha/FriendlyCaptcha.module.css
+++ b/client/src/components/common/FriendlyCaptcha/FriendlyCaptcha.module.css
@@ -1,6 +1,3 @@
 .container {
-  padding-top: 1rem;
-  width: 23rem;
-  position: absolute;
   border-radius: 1rem;
 }
