--- a/client/src/components/features/Home/TermsAndConditionsSection/TermsAndConditionsSection.module.css
+++ b/client/src/components/features/Home/TermsAndConditionsSection/TermsAndConditionsSection.module.css
@@ -3,11 +3,13 @@
   font-style: italic;
   font-size: 1.5rem;
   text-align: left;
+  max-width: 40rem;
   margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
   .terms {
     margin-top: 0.5rem;
+    width: 30rem;
   }
 }
