--- a/client/src/components/features/Tutorial/RecommendedBrowsersExplanation/RecommendedBrowsersExplanation.module.css
+++ b/client/src/components/features/Tutorial/RecommendedBrowsersExplanation/RecommendedBrowsersExplanation.module.css
@@ -1,4 +1,18 @@
 .container {
+  padding: 0.5rem 0;
   line-height: 1.5;
-  margin-bottom: 0.5rem;
+  width: 100%;
+}
+
+.recommendedBrowsersList li {
+  list-style-type: disc;
+  margin-left: 3rem;
+  line-height: 1.5;
+}
+/* Mobile*/
+@media only screen and (max-width: 768px) {
+  .recommendedBrowsersList li {
+    margin-left: 2rem;
+    line-height: 1.5;
+  }
 }
