--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -3,7 +3,6 @@
   overflow-y: scroll;
   padding-bottom: 0.5rem;
   margin: 0 auto;
-  padding-left: 4rem;
 }
 
 .homepageHeader {
